package usecasemodel

type SaveItem struct {
	ID string // 商品ID
}

type ListItem struct {
	ID    string // 商品ID
	Name  string // 商品名
	Price int    // 金額
}
